<resources>
    <string name="app_name">KartikOnlineFireBase</string>
    <string name="g_b_products"><![CDATA[G & B Products]]></string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome_msg_admin">Welcome to Admin Panel</string>
    <string name="login_text">Login</string>
    <string name="signup_text">Sign Up</string>
    <string name="forgot_pass_text">Forgot Password?</string>
    <string name="create_acc_text">Don\'t have an account ? create here</string>
    <string name="login_with_phone">Login with Phone Number instead</string>
    <string name="login_with_phone_msg">Enter Mobile Number to continue</string>
    <string name="get_otp">Get OTP</string>
    <string name="verify_otp">Verify</string>
    <string name="enter_otp_label">Enter OTP to continue</string>
    <string name="send_code_again">Still not getting the code?</string>
    <string name="signup_with_email_text">Sign Up With Email</string>
    <string name="signin_warn_text">By signing in you agree to our terms and conditions</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Mayank</string>
    <string name="nav_header_subtitle">mayank@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="file_provider_authority" translatable="false">com.example.kartikonlinefirebase.fileprovider</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="home_second">Home Second</string>
    <string name="title_activity_fab">FabActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>


</resources>
