<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.LoginWithPhone"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tv_enter_number_msg"
        android:layout_marginTop="48dp"
        android:padding="24dp"
        android:text="@string/login_with_phone_msg"
        android:textSize="28sp"
        android:textAlignment="textStart"
        android:textStyle="bold"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/et_input_number"
        android:padding="16dp"
        android:hint="Mobile Number"
        android:textSize="16sp"
        android:inputType="phone" />


    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btn_get_code"
        android:visibility="gone"
        android:layout_gravity="center"
        android:text="@string/get_otp"
        android:textColor="@android:color/white"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/container_otp_verify"
        android:orientation="vertical"
        android:visibility="visible">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tv_enter_otp_label"
            android:layout_marginTop="16dp"
            android:text="@string/enter_otp_label"
            android:textSize="22sp"
            android:textAlignment="center"
            android:textStyle="bold"/>
    

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btn_verify"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            android:text="@string/verify_otp"
            android:textColor="@android:color/white"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tv_send_code_again"
            android:layout_marginTop="8dp"
            android:text="@string/send_code_again"
            android:textSize="16sp"
            android:textAlignment="center"
            android:textStyle="bold"/>

    </LinearLayout>


</LinearLayout>