<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:padding="16dp"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context=".activities.Login2FireStore">

    <ImageView
        android:src="@drawable/kartik_online_logo"
        android:layout_width="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_height="wrap_content"/>

    <TextView
        android:layout_marginTop="48sp"
        android:layout_gravity="center"
        android:textSize="24sp"
        android:textColor="@color/colorAccent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/welcome_msg_admin" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/l_email_et"
            android:hint="Email"
            android:text="mayank@gmail.com"
            android:textSize="16sp"
            android:layout_gravity="center" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp">

    <EditText
        android:id="@+id/l_pwd_et"
        android:hint="Password"
        android:text="12345678"
        android:inputType="textPassword"
        android:layout_marginTop="28dp"
        android:layout_gravity="center"
        android:textSize="16sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/l_login_btn"
        android:text="@string/login_text"
        android:background="@drawable/buttonbackground"
        android:textColor="@color/colorAccent"
        android:layout_marginTop="32dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/login_forget_password_tv"
        android:layout_gravity="center"
        android:layout_marginTop="32dp"
        android:textSize="16sp"
        android:textStyle="bold"
        android:textColor="@color/colorAccent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forgot_pass_text"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tv_create_account"
        android:layout_gravity="center"
        android:layout_marginTop="32dp"
        android:textSize="16sp"
        android:textStyle="bold"
        android:textColor="@color/colorAccent"
        android:text="@string/create_acc_text"/>


</LinearLayout>