<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="4dp"
    android:gravity="center">

    <ImageView
        android:src="@drawable/kartik_online_logo"
        android:padding="8dp"
        android:layout_gravity="center|bottom"
        android:layout_width="240dp"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_gravity="center"
        android:text="@string/signup_with_email_text"
        android:padding="4dp"
        android:textSize="16sp"
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="4dp">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <EditText
                android:id="@+id/r_un_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Username"
                android:padding="8dp"
                android:singleLine="true"
                android:imeOptions="actionNext"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <EditText
                android:id="@+id/r_email_et"
                android:padding="8dp"
                android:layout_marginTop="4dp"
                android:hint="Email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:imeOptions="actionNext"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <EditText
                android:id="@+id/r_pass_et"
                android:inputType="textPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:hint="Password"
                android:padding="8dp"
                android:singleLine="true"
                android:imeOptions="actionNext"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <EditText
                android:id="@+id/r_cn_pwd_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:hint="Confirm password"
                android:inputType="textPassword"
                android:padding="8dp"
                android:singleLine="true"
                android:imeOptions="actionNext"/>

            </com.google.android.material.textfield.TextInputLayout>

            <CheckBox
                android:layout_marginTop="18dp"
                android:id="@+id/check_terms_and_condtions"
                android:gravity="center"
                android:text="@string/signin_warn_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <Button
                android:id="@+id/r_reg_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="18dp"
                android:background="@drawable/buttonbackground"
                android:text="@string/signup_text"
                android:textColor="#000000"
                android:textStyle="bold" />

        </LinearLayout>

    </ScrollView>

</LinearLayout>
