<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="4dp"
    android:gravity="center">

    <ImageView
        android:src="@drawable/kartik_online_logo"
        android:layout_gravity="center|bottom"
        android:layout_width="240dp"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_gravity="center"
        android:text="@string/signup_with_email_text"
        android:padding="4dp"
        android:textSize="16sp"
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="12dp">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:hint="Username">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/r_un_et"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:singleLine="true"
                    android:imeOptions="actionNext"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_marginTop="24dp"
                android:hint="Email">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/r_email_et"
                    android:textSize="16sp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:singleLine="true"
                    android:imeOptions="actionNext"/>

                </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:hint="Password">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/r_pass_et"
                    android:inputType="textPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:singleLine="true"
                    android:imeOptions="actionNext"/>
                </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:hint="Confirm password">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/r_cn_pwd_et"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:inputType="textPassword"

                    android:singleLine="true"
                    android:imeOptions="actionNext"/>

            </com.google.android.material.textfield.TextInputLayout>

            <CheckBox
                android:layout_marginTop="18dp"
                android:id="@+id/check_terms_and_condtions"
                android:gravity="center"
                android:text="@string/signin_warn_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <Button
                android:id="@+id/r_reg_btn"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:layout_marginTop="18dp"
                android:background="@drawable/buttonbackground"
                android:text="@string/signup_text"
                android:textColor="@android:color/white"
                android:textStyle="bold" />

        </LinearLayout>

    </ScrollView>

</LinearLayout>
